<resources>
    <string name="app_name">Surat</string>
    <string name="t4">
        "هه‌ر بۆ خوایه‌ هه‌موو ناوه‌ جوان و پیرۆزه‌کان، جا ئه‌ی ئیمانداران به‌و ناوانه‌ دوعا و نزا بکه‌ن و هاناو هاوار بۆ ئه‌و زاته‌ به‌رن، واز بهێنن له‌وانه‌ی که‌ له‌ ناوه‌ پیرۆزه‌کانی خوادا لادان ده‌که‌ن و له‌ ئاینده‌دا پاداشتی ئه‌و کارو کرده‌وانه‌یان وه‌رده‌گرن که‌ ئه‌نجامیان ده‌دا
        "

    </string>
    <string name="KtebaPirozekan">کتێبە پیرۆزەکان لە ئیسلامدا</string>
    <string name="KtebaPirozekanDrezha">کتێبە ئاسمانییەکان، بە پێی ئیسلام ئەو کتێب و پەیامانەن کە خوا دایبەزاندوون بۆ پێغەمبەر و نێردراوەکانی، وەک لە قورئاندا هاتووە؛ ﴿إِنَّا أَوْحَيْنَا إِلَيْكَ كَمَا أَوْحَيْنَا إِلَى نُوحٍ وَالنَّبِيِّينَ مِن بَعْدِهِ وَأَوْحَيْنَا إِلَى إِبْرَاهِيمَ وَإِسْمَاعِيلَ وَإِسْحَاقَ وَيَعْقُوبَ وَالأَسْبَاطِ وَعِيسَى وَأَيُّوبَ وَيُونُسَ وَهَارُونَ وَسُلَيْمَانَ وَآتَيْنَا دَأوُودَ زَبُورًا﴾ [١]، واتە؛ به‌ڕاستی ئێمه نیگامان بۆ تۆ ناردووه هه‌ر وه‌کو چۆن نیگامان بۆ نوح و پێغه‌مبه‌رانی دوای ئه‌و ناردووه‌، هه‌روه‌ها نیگامان ناردووه بۆ ئیبراهیم و ئیسماعیل و ئیسحاق و یه‌عقوب و (هه‌ندێک) له کوڕانی یه‌عقوب و عیسا و ئه‌یوب و یونس و هاروون و سوله‌یمان، زه‌بوریشمان به داود به‌خشیووه.</string>
    <string name="bawarBunBaKteb">باوەڕبوون بە کتێبە ئاسمانییەکان</string>
    <string name="bawarBunBaKtebDrezha">باوەڕبوون بە کتێبە ئاسمانییەکان لە ئیسلامدا یەکێکە لە پایەکانی باوەڕ، وەک لەم ئایەتەدا هاتووە؛ "و الذين يؤمنون بما أُنزل إليك وما أُنزل من قبلك وبالآخرة هم يوقنون"، [٢] واتە؛ (له هه‌مان كاتدا) ئه‌وانه باوه‌ڕ ده‌هێنن به‌و (په‌یامه‌ی) كه بۆ تۆ (ئه‌ی محمد) دابه‌زێنراوه و به‌و په‌یامانه‌ش كه بۆ (پێغه‌مبه‌رانی‎ پێش تۆ) دابه‌زێنراوه‌، دڵنیاش ده‌بن كه ڕۆژی دوایی پێش دێت و قیامه‌ت هه‌ر به‌رپا ده‌بێت.

\n

باوەڕبوون بە کتێبەکان چوار بوار دەگرێتەوە؛
        \n

یەکەم؛ باوەڕبوون بەوەی کە بەڕاستی دابەزینیان لای خواوەیە.
\n
دووەم؛ باوەڕبوون بەوانەی ناوەکانیان ئەزانرێت وەک؛ قورئان کە دابەزیووە بۆ پێغەمبەری ئیسلام، و زەبوور دابەزیووە بۆ داوود و ئینجیل دابەزیووە بۆ عیسا و تەورات دابەزیووە بۆ موسا و سوحفی ئیبراهیم، و هەروەها باوەڕبوون بەو کتێبانەی ناوەکانیان نازانرێت.
\n
سێیەم؛ بەڕاست دانانی ئەوەی ڕاستە لە هەواڵەکانیان، وەک هەواڵەکانی قورئان، و ئەو هەواڵانەش کە نەگۆڕاوون یان دەستکاری نەکراون لە کتێبەکانی پێشوو.
\n
چوارەم؛ کردەوەکردن بەو حوکمانەی کە هەڵنەوەشێنراوەتەوە تیایاندا، ڕازی بوون و مل کەچبوون پێیان.

</string>
    <string name="laQuran">ئەو کتێبانەی لە قورئاندا ناویان هاتووە</string>
    <string name="zabur">یەکەم/ زەبوور</string>
    <string name="zaburDRezha">زەبوور ئەو کتێبەیە کە خوا بۆ داوودی دابەزاندووە وەک لەم ئایەتەدا هاتووە؛ : ﴿.. وَآتَيْنَا دَأوُودَ زَبُورًا﴾ [٣]، واتە؛ زه‌بوریشمان به داود به‌خشیووه.</string>
    <string name="tawrat">دووەم/ تەورات</string>
    <string name="tawratDrezha">بە پێی بیروباوەڕی ئیسلامی تەورات ئەو کتێبەیە کە بۆ موسا دابەزێنراوە، کە کتێبەکی مەزن بووە و ڕوناکی و ڕێنمایی لە خۆ گرتووە، لە قورئاندا دەربارەی هاتووە؛
     \n

﴿إِنَّا أَنزَلْنَا التَّوْرَاةَ فِيهَا هُدًى وَنُورٌ يَحْكُمُ بِهَا النَّبِيُّونَ الَّذِينَ أَسْلَمُوا لِلَّذِينَ هَادُوا وَالرَّبَّانِيُّونَ وَالأَحْبَارُ بِمَا اسْتُحْفِظُوا مِنْ كِتَابِ اللَّهِ﴾ [٤]، واتە؛ به‌ڕاستی ئێمه کاتێک ته‌وراتمان نارده خواره‌وه ڕێنموویی تیادا بوو، نوور و ڕووناکیش بوو، ئه‌و پێغه‌مبه‌رانه‌ی که هه‌میشه ملکه‌چ و فه‌رمانبه‌ردار بوون حوکمی ئه‌وانه‌یان پێده‌کرد که ببونه جوله‌که‌، هه‌روه‌ها زانا په‌روه‌ردگار ناسه‌کانیان و زانا شه‌رع ناسه‌کانیشیان، حوکمیان ده‌کرد به‌وه‌ی داوایان لێکرابوو بیپارێزن، که ئه‌ویش کتێبی خوا (ته‌وراته‌).
\n
﴿ثُمَّ آتَيْنَا مُوسَى الْكِتَابَ تَمَامًا عَلَى الَّذِي أَحْسَنَ وَتَفْصِيلًا لِكُلِّ شَيْءٍ وَهُدًى وَرَحْمَةً لَعَلَّهُمْ بِلِقَاءِ رَبِّهِمْ يُؤْمِنُونَ﴾ [٥]، واتە؛ پاشان کتێبی ته‌وراتمان به موسا به‌خشی بۆ ئه‌وه‌ی نازو نیعمه‌تی ته‌واو بڕژین به‌سه‌ر ئه‌و که‌سه‌دا که به‌چاکی پیاده‌ی ده‌کات و جیاکه‌ره‌وه و ڕوون که‌ره‌وه‌ی هه‌موو شتێک بێت و ڕێنموویی و میهره‌بانیش بێت، بۆ ئه‌وه‌ی ئه‌وانه باوه‌ڕی دامه‌زراو بهێنن به‌گه‌یشتنه‌وه‌یان به په‌روه‌ردگاریان.
\n
و خوا لە قورئاندا ئاماژە بەوە دەکات کە تەورات دەستکاری کراوە و تێکدراوە، لەبەرئەوە جارێکی تر خوا پێغەمبەر عیسای ناردووە بۆ ڕێنمایی کردنی یەهود بۆ ڕاستیەکان جارێکی تر.
</string>
    <string name="Enjil">سێیەم/ ئینجیل</string>
    <string name="EnjilDrezha">بە پێی بیروباوەڕی ئیسلامی، ئینجیل ئەو کتێبەیە کە خوا دایبەزاندووە بۆ مەسیح (عیسا) وەک تەواوکەرێک بۆ تەورات، و پاڵپشت کردنی و بانگەواز کردن بۆ پەرستنی خوا بە بێ هاوەڵ.
\n
بەڵام ئینجیل بە پێی بیروباوەری مەسیحی کتێبی پیرۆزی مەسیحیەکانە و تەورات و ئنجیل ئەگرێتەوە، و چوار ئینجیل هەیە؛
\n
ئینجیلی یوحەنا
\n
ئینجیلی مرقس
\n
ئینجیلی مەتتا
\n
ئینجیلی لووقا
\n
خوا لە قورئاندا ئاماژەی بەوەکردووە کە ئینجیل گۆڕانکاری و دەسنکاری تێدا کراوە، لەبەر ئەوە پێغەمبەرمحەمەدی ناردووە بۆ ڕێنماییکردنەوەی خەڵک جارێکی تر.
</string>
    <string name="Quran">چوارەم/ قورئانی پیرۆز</string>
    <string name="QuranDrezha">قورئان، ووتە و گوڤتاری خوایە، خوا لەسەر ڕاستیەکان پێی ئەدوێت و دایبەزانووە بۆسەر پێغەمبەر محەمەد، و باوەڕداران باوەڕی تەواویان پێیەتی و بە ووتەی خوای ئەزانن.

\n

و بە پێی بیروباوەری ئیسلامی قورئان دوایین کتێبی ئاسمانییە، لە هەموویان درێژتر و کشتگیرترە، دەربارەی قورئان چەند ئایەتێک لە قورئاندا هاتووە؛
\n


﴿وَأَنزَلْنَا إِلَيْكَ الْكِتَابَ بِالْحَقِّ مُصَدِّقًا لِمَا بَيْنَ يَدَيْهِ مِنْ الْكِتَابِ وَمُهَيْمِنًا عَلَيْهِ﴾[٦]، واتە؛ ئێمه قورئانمان هاوڕێ له‌گه‌ڵ هه‌موو حه‌قیقه‌ت و ڕاستیه‌کدا بۆ تۆ دابه‌زاندووه‌، ڕاستی و دروستی کتێبه‌کانی پێش خۆیشی دیاری ده‌کات و چاودێره به‌سه‌ر هه‌موویاندا.
\n
﴿وَمَا كَانَ هَذَا الْقُرْآنُ أَنْ يُفْتَرَى مِنْ دُونِ اللَّهِ وَلَكِنْ تَصْدِيقَ الَّذِي بَيْنَ يَدَيْهِ وَتَفْصِيلَ الْكِتَابِ لا رَيْبَ فِيهِ مِنْ رَبِّ الْعَالَمِينَ﴾ [٧]، واتە؛ وه‌نه‌بێت ئه‌م قورئانه له‌لایه‌ن که‌سێکه‌وه داڕێژرا بێت و هه‌ڵبه‌سترا بێت جگه له‌خوا، به‌ڵکو ڕاستی و ڕه‌وانی کتێبه ئاسمانیه‌کانی پێش خۆشی دووپات ده‌کاته‌وه‌، هه‌روه‌ها ڕوونکه‌ره‌وه‌ی بیرو باوه‌ڕو ئه‌رکه‌کانه‌، به‌ڕاستی هیچ گومان له‌وه‌دا نیه که ئه‌م قورئانه‌له‌لایه‌ن په‌روه‌ردگاری هه‌موو جیهانه‌وه ڕه‌وانه‌کراوه‌.
\n
﴿مَا كَانَ حَدِيثًا يُفْتَرَى وَلَكِنْ تَصْدِيقَ الَّذِي بَيْنَ يَدَيْهِ وَتَفْصِيلَ كُلِّ شَيْءٍ وَهُدًى وَرَحْمَةً لِقَوْمٍ يُؤْمِنُونَ﴾ [٨]، واتە؛ وه‌نه‌بێت ئه‌م قورئانه قسه‌و باسێك بێت هه‌ڵبه‌سترابێت، به‌ڵکو به‌ڕاست دانه‌ری ئه‌وه‌یه که له پێش خۆیه‌وه هاتووه (ته‌ورات و ئینجیل) و ڕوونکه‌ره‌وه و جیاکردنه‌وه‌ی هه‌موو شتێکی پێویسته له‌ئایندا، ڕێنمومیی و ڕه‌حمه‌تیشه بۆ که‌سانێك باوه‌ڕ ده‌هێنن.
\n
و قورئان پارێزراوە لە هەر دەستکاریکردن و تێکدان و گۆڕانکارییەک و هەموو جیهانی ئیسلامی یەک نوسخەی قورئان کۆیان دەکاتەوە تا ئێستا.
</string>
    <string name="sarchawa">سەرچاوەکان</string>
    <string name="yek">١ سورەتی نیسا، ئایەتی ١٦٣</string>
    <string name="dw">٢ سورەتی بەقەڕە، ٤</string>
    <string name="se">٣ سورەتی مائیدە، ٤٤</string>
    <string name="chwar">٤ سورەتی ئەنعام، ١٥٤</string>
    <string name="penj">٥  سورەتی مائیدە: 48</string>
    <string name="shash">٦ سورەتی يونس: 37</string>
    <string name="haft">٧  سورەتی يوسف: 111</string>
    <string name="payaknSarata">بۆ ئەوەی مرۆڤ موسڵمان بێت پێویستە لەسەری باوەڕی بە پایەکانی باوەڕ هەبێت کە لە ئیسلامدا بە شەش پایە ناسراون؛ وەک لە قورئاندا هاتووە ؛ ﴿آمَنَ الرَّسُولُ بِمَا أُنزِلَ إِلَيْهِ مِن رَّبِّهِ وَالْمُؤْمِنُونَ كُلٌّ آمَنَ بِاللّهِ وَمَلآئِكَتِهِ وَكُتُبِهِ وَرُسُلِهِ لاَ نُفَرِّقُ بَيْنَ أَحَدٍ مِّن رُّسُلِهِ وَقَالُواْ سَمِعْنَا وَأَطَعْنَا غُفْرَانَكَ رَبَّنَا وَإِلَيْكَ الْمَصِيرُ)[١] واتە؛ پێغه‌مبه‌رو ئیمانداران باوه‌ڕیان هه‌یه به‌وه‌ی له لایه‌ن په‌روه‌ردگاریانه‌وه هاتۆته خواره‌وه‌، هه‌موویان باوه‌ڕیان هه‌یه به خواو فریشته‌کانی و کتێبه‌کانی و پێغه‌مبه‌ره‌کانی (ده‌ڵێن) هیچ جۆره جیاوازیه‌ک ناکه‌ین له نێوان هیچ پێغه‌مبه‌رێ له پێغه‌مبه‌ره‌کانی خوادا.
و کاتێک لە پێغەمبەر محەمەد پرسراوە لەسەر باوەر، لە وەڵامدا فەرموویەتی؛ {أن تؤمن بالله وملائكته وكتبه ورسله واليوم الآخر, وتؤمن بالقدر خيره وشره}[٢] واتە؛ باوەڕت بە خوا و فریشتەکانی و کتێبەکانی و پێغەمبەرەکانی و و ڕۆژی دوایی هەبێت، هەروەها باوەڕت بە قەدەر هەبێت بە باش و خراپیەوە.
</string>
    <string name="payakanRiz">پایەکانی باوەڕ لە ئیسلامدا ئەمانەی خوارەوەن؛</string>
    <string name="BawarBunBaXwda">باوەربوون بە خوا</string>
    <string name="BawarBunBaXwdaDrezha">باوەربوونی تەواوە بە بوون و پەروەردگارێتی و پەرستراوی خوای تاک و بێ هاوەڵ، هەروەها باوەربوون بە ناو و سیفەتەکانی خوا دەگرێتەوە کە لە قورئان و فەرموودەکانی پێغەمبەردا هاتوون.</string>
    <string name="BawarBunBaFrishtakan">باوەڕبوون بە فریشتەکان</string>
    <string name="BawarBunBaFrishtakanDrezha">مەبەست لە باوەربوون بە فریشتە باوەربوونی تەواوە بە بوونی فریشتە و خوا دروستی کردوون لە نور (ڕوناکی)، و گوێڕایەڵی خوان و دەرناچن لە فەرمانەکانی خوا، و هەڵدەستن بە جێبەجێکردنی فەرمانەکانی خوا.</string>
    <string name="BawarBunBaKteb">باوەربوون بە کتێبە ئاسمانیەکان</string>
    <string name="BawarBunBaKtebDrezha">مانای ئەمەش باوەربوونە بەو کتێبانەی خوا بۆ پێغەمبەر و نێردراوەکانی خۆی ڕەوانە کردووە، ئەمانەش ئەو کتێبانە ئەگرێتەوە کە لە قورئاندا ناویان هاتبێت یان نا، لەو کتێبانەش کە لە قورئاندا ناویان هاتووە، تەورات و ئینجیل و سوحفی ئیبراهیم و زەبوور و قورئانە، تەورات بۆ موسا نێردراوە و ئینجیل بۆ عیسا و زەبوور بۆ داوود و سوحف بۆ ئیبراهیم و قورئانیش معجیزەی پێغەمبەری ئیسلام محەمەدە.</string>
    <string name="BawarBunBaPexambaran">باوەڕبوون بە پێغەمبەران	</string>
    <string name="BawarBunBaPexambaranDrezha">باوەڕبوونە بەو پێغەمبەر و نێردراوانەی خوا کە لە قورئاندا ناویان هاتووە، و هەروەها باوەڕبوون بەوەی کە پێغەمبەری تر هەن لە قورئاندا ناویان نەهاتووە، و هیچ کەس ناو و ژمارەی تەواوی پێغەمبەرەکان نازانێت خوا نەبێت.
خوا لە قورئاندا ناوی بیست و پێنج پێغەمبەری هێناوە کە ئەمانەن؛ ئادەم، نوح، ئیدریس، ساڵح ئیبراهیم، هود، لووت، یونس، ئیسماعیل، ئیسحاق، یەعقوب، یوسف، ئەیوب، شوعەیب، موسا، هاروون، یەسع، زولکەفل، داوود، زەکەریا، سولەیمان، ئیلیاس، یەحیا، عیسا و موحممەد، و پێویستە لەسەر موسڵمان باوەڕی بە پێغەمبەرایتی و پەیامەکانیان هەبێت.
</string>
    <string name="BawarBunBaRozhyDway">باوەربوون بە ڕۆژی دوایی	</string>
    <string name="BawarBunBaRozhyDwayDrezha">باوەربوون بە هەموو ئەو باس و زانیاریانە ئەگرێتەوە کە خوا و پێغەمبەری ئیسلام دەربارەی ناو گۆڕ و زیندوو بونەوە و حەشر و لێپرسینەوە و بەهەشت و ئاگرن، و خوا هەموویانی ئامادەکردووە.</string>
    <string name="BawarBunBaQaDar">باوەربوون بە قەدەر</string>
    <string name="BawarBunBaQaDarDewzha">باوەڕبوونە بەوەی بەدیهێنەری هەموو شتێک خوایە، موسڵمانانی سونە لەو باوەڕەدان کە ھەموو شتێک نوسراوە پێش دروستبوونی بەشەر وئەمەش خوا بە تەنھا ئەیزانێت, کە ئەمەش وەکو زاراوە هەموو کردار وهەڵسوکەوتێک ئەگرێتەوە کە مرۆڤ دەسەڵاتى نەبێت بە سەریا وەک گەردەلول وبوومەلەرزە وڕووداوە هاوشێوەکانیان.</string>
    <string name="sarchawa2">سەرچاوەکان</string>
    <string name="SuraAlBaqara">سورة البقرة</string>
    <string name="Rawa">رواه مسلم والبخاري</string>
</resources>