<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainFGColor"
    tools:context=".PayaKan">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_margin="5dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/cardeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_man"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.363" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nrt_bd"
            android:text="پایەکانی باوەڕ"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="199dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/k24kurdishlight_light"
                android:layout_gravity="right"
                android:text="@string/payaknSarata"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/k24kurdishbold_bold"
                android:gravity="center"
                android:text="@string/payakanRiz"
                android:textColor="@color/colorPrimary"
                android:padding="10dp"
                android:textSize="25sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/k24kurdishbold_bold"
                android:text="@string/BawarBunBaXwda"
                android:layout_gravity="right"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/k24kurdishlight_light"
                android:layout_gravity="right"
                android:text="@string/BawarBunBaXwdaDrezha"
                android:textColor="@color/black"
                android:padding="10dp"
                android:textSize="20sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/k24kurdishbold_bold"
                android:layout_gravity="right"
                android:text="@string/BawarBunBaFrishtakan"
                android:textColor="@color/colorPrimary"
                android:padding="10dp"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/k24kurdishlight_light"
                android:layout_gravity="right"
                android:text="@string/BawarBunBaFrishtakanDrezha"
                android:textColor="@color/black"
                android:padding="10dp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/k24kurdishbold_bold"
                android:layout_gravity="right"
                android:text="@string/BawarBunBaKteb"
                android:textColor="@color/colorPrimary"
                android:padding="10dp"
                android:textSize="22sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/k24kurdishlight_light"
                android:layout_gravity="right"
                android:text="@string/BawarBunBaKtebDrezha"
                android:textColor="@color/black"
                android:padding="10dp"
                android:textSize="20sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/k24kurdishbold_bold"
                android:layout_gravity="right"
                android:text="@string/BawarBunBaPexambaran"
                android:textColor="@color/colorPrimary"
                android:padding="10dp"
                android:textSize="22sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/k24kurdishlight_light"
                android:layout_gravity="right"
                android:text="@string/BawarBunBaPexambaranDrezha"
                android:textColor="@color/black"
                android:padding="10dp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/k24kurdishbold_bold"
                android:layout_gravity="right"
                android:text="@string/BawarBunBaRozhyDway"
                android:textColor="@color/colorPrimary"
                android:padding="10dp"
                android:textSize="22sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/k24kurdishlight_light"
                android:layout_gravity="right"
                android:text="@string/BawarBunBaRozhyDwayDrezha"
                android:textColor="@color/black"
                android:padding="10dp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/k24kurdishbold_bold"
                android:layout_gravity="right"
                android:text="@string/BawarBunBaQaDar"
                android:textColor="@color/colorPrimary"
                android:padding="10dp"
                android:textSize="22sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/k24kurdishlight_light"
                android:layout_gravity="right"
                android:text="@string/BawarBunBaQaDarDewzha"
                android:textColor="@color/black"
                android:padding="10dp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/k24kurdishbold_bold"
                android:layout_gravity="right"
                android:text="@string/sarchawa2"
                android:textColor="@color/colorPrimary"
                android:padding="10dp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/k24kurdishbold_bold"
                android:layout_gravity="right"
                android:text="@string/SuraAlBaqara"
                android:textColor="@color/colorPrimary"
                android:padding="10dp"
                android:textSize="20sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/k24kurdishbold_bold"
                android:layout_gravity="right"
                android:text="@string/Rawa"
                android:textColor="@color/colorPrimary"
                android:padding="10dp"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>